Travel::Status::DE::VRR 2.00 - Sun Dec 03 2023

    * New dependency: DateTime
    * Result: Add datetime, sched_datetime, rt_datetime accessors.
    * Result: Remove date, time, sched_date, sched_time accessors.
      Use datetime->strftime('%H:%M') etc. instead. (BREAKING CHANGE)
    * Stop: Add arr, dep accessors.
    * Stop: Remove arr_date, arr_time, dep_date, dep_time accessors.
      Use arr->strftime('%d.%m.%Y') etc. instead. (BREAKING CHANGE)
    * efa-m: Remove --track-via option, its behaviour is now included in --via
      (BREAKING CHANGE)

Travel::Status::DE::VRR 1.24 - Sat Dec 02 2023

    * EFA: Fix full_route creating route elements with invalid data
    * efa-m: Fix -v / -V (as a consequence of the fix above)

Travel::Status::DE::VRR 1.23 - Fri Nov 24 2023

    * efa-m: Do not show free-text messages by default. Use the newly
      introduced -Om option to show them
    * efa-m: Show real-time departure rather than scheduled time + delay
    * Result: Add train_type and train_name accessors

Travel::Status::DE::VRR 1.22 - Sat Sep 02 2023

    * Do not use now-deprecated smartmatch features

Travel::Status::DE::VRR 1.21 - Sat Jul 22 2023

    * Add service VRR3
    * Update service URLs for VVO, VRN
    * Remove discontinued services SVV, TLEM, VBL, Verbundlinie, VOR

Travel::Status::DE::VRR 1.20 - Sun Mar 28 2021

    * efa-m, EFA: Accept "stopID" stop type
    * EFA: Add proximity_search (useProxFootSearch) option

Travel::Status::DE::VRR 1.19 - Sat Mar 27 2021

    * Result: Add ->train_no accessor

Travel::Status::DE::VRR 1.18 - Thu Mar 25 2021

    * EFA: "place" is now optional
    * Result: Add ->occupancy accessor
    * efa-m: The "place" argument is now optional
    * efa-m: Show expected vehicle occupancy, if available

Travel::Status::DE::VRR 1.17 - Sat May 02 2020

    * Add MVV (Münchner Verkehrs- und Tarifverbund) and VAG (Freiburger
      Verkehrs AG) services
    * Fix encoding when using VOR or LinzAG services
